refactor: colocando ejs na rota principal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,7 @@
-<!-- public/index.html -->
+<!-- public/index.ejs -->
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Evento</title>
-</head>
+  <%- include('partials/head', { title: 'Evento' }) %>
 <body>
   <div>
     <img src="#" alt="Imagem do Evento">
