feat: fluxo e design select seats

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,6 +12,7 @@
     <style type="text/css">
         body {
             height: 100vh;
+            background-color: #6b6b6b;
         }
     </style>
     <!-- Adicione outras tags do head aqui -->
