--- a/views/tickets/confirm-seats.ejs
+++ b/views/tickets/confirm-seats.ejs
@@ -5,7 +5,7 @@
 <%- include('../partials/head', { title: 'Seleção de poltronas' }) %>
 
     <body>
-        <div class="container">
+        <div class="container align-items-top justify-content-center" style="height: 100vh;">
             <div class="row mt-2">
                 <div class="col-6">
                     <div class="mb-3">
@@ -106,5 +106,4 @@
 
         </script>
     </body>
-
 </html>
