--- a/views/tickets/select-tickets.ejs
+++ b/views/tickets/select-tickets.ejs
@@ -5,11 +5,11 @@
 <%- include('../partials/head', { title: 'Seleção de ingressos' }) %>
 
   <body>
-    <div class="container d-flex flex-column justify-content-center align-items-center">
-      <div data-mdb-input-init class="form-outline w-50">
-        <label class="form-label p-0" for="typeNumber">Quantidade de ingressos</label>
-        <input type="number" id="typeNumber" class="form-control" min="1" max="10"/>
-        <button type="button" class="btn btn-primary w-75 mx-4" onclick="saveQtdTickets()">Prosseguir</button>
+    <div class="container d-flex flex-column justify-content-center align-items-center"  style="height: 100%;">
+      <div data-mdb-input-init class="form-outline w-50 d-flex flex-column justify-content-center align-items-center gap-3">
+        <label class="form-label p-0" for="typeNumber"><h6 style="color: #89ea55">Quantidade de ingressos</h6></label>
+        <input type="number" id="typeNumber" class="form-control mb-3" min="1" max="10"/>
+        <button type="button" class="btn btn-success w-75 mx-4" onclick="saveQtdTickets()">Escolher poltronas</button>
       </div>
     </div>
   </body>
