feat: login e register

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,11 @@
       </div>
       <div class="row justify-content-center w-100">
         <button type="button" class="btn btn-secondary w-75 my-2 mx-4" data-bs-toggle="modal"
-           onclick="window.open('https://wa.me/27988655236?text=Vim%20do%20site', '_blank')">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-            <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+          onclick="window.open('https://wa.me/27988655236?text=Vim%20do%20site', '_blank')">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp"
+            viewBox="0 0 16 16">
+            <path
+              d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232" />
           </svg>
           WhatsApp</button>
       </div>
@@ -33,7 +35,7 @@
             <h1 class="modal-title fs-5" id="loginComprarModalLabel">Autenticação</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" id="modal-body-login">
             <form id="loginForm">
               <div class="mb-3">
                 <label for="cpf-input" class="col-form-label">CPF:</label>
@@ -75,6 +77,10 @@
     </div>
 
     <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        localStorage.clear();
+      });
+
       function inputformatCPF(input) {
         let value = input.value.replace(/\D/g, ''); // Remove todos os caracteres não numéricos
 
@@ -94,21 +100,35 @@
 
       function authenticateUser(input) {
         const cpfInput = (input === "comprar") ? document.getElementsByClassName('cpf-input-comprar')[0].value : document.getElementsByClassName('cpf-input-troca')[0].value;
-
         const cpfError = document.getElementById('cpfError');
 
-        // Verifica se o CPF está completo (com 14 caracteres: 11 números, 2 pontos e 1 traço)
         if (cpfInput.length === 14) {
-          // Salva o CPF no localStorage
-          localStorage.setItem('userCPF', cpfInput);
-
-          // Redireciona para a rota de seleção de ingressos
-          if (input == "comprar") window.location.href = '/select-tickets';
-          //if(input == "trocar")
-        } else {
-          // Exibe uma mensagem de erro
-          cpfError.style.display = 'block';
-        }
+          fetch(`search-user-cpf/${cpfInput}`)
+            .then(response => response.json())
+            .then(data => {
+              localStorage.setItem('userCPF', cpfInput);
+              if (data.user !== null) {
+                const modalBodyLogin = document.getElementById('modal-body-login');
+                const alertSuccess = document.createElement("div")
+                alertSuccess.className = "alert alert-success";
+                alertSuccess.innerHTML = `CPF encontrado, faça login!`;
+                modalBodyLogin.appendChild(alertSuccess)
+                setTimeout(() => {
+                  window.location.href = '/login';
+                }, 2000);
+              }
+              else {
+                const modalBodyLogin = document.getElementById('modal-body-login');
+                const alertSuccess = document.createElement("div")
+                alertSuccess.className = "alert alert-danger";
+                alertSuccess.innerHTML = `CPF não encontrado, faça cadastro!`;
+                modalBodyLogin.appendChild(alertSuccess)
+                setTimeout(() => {
+                  window.location.href = '/register';
+                }, 2000);
+              }
+            });
+        } else cpfError.style.display = 'block';
       }
 
     </script>
