--- a/views/tickets/select-tickets.ejs
+++ b/views/tickets/select-tickets.ejs
@@ -7,8 +7,13 @@
   <body>
     <div class="container d-flex flex-column justify-content-center align-items-center"  style="height: 100%;">
       <div data-mdb-input-init class="form-outline w-50 d-flex flex-column justify-content-center align-items-center gap-3">
-        <label class="form-label p-0" for="typeNumber"><h6 style="color: #89ea55">Quantidade de ingressos</h6></label>
-        <input type="number" id="typeNumber" class="form-control mb-3" min="1" max="10"/>
+        <label class="form-label p-0" for="qtdIngressos"><h6 style="color: #89ea55">Quantidade de ingressos</h6></label>
+        <input type="number" id="qtdIngressos" class="form-control mb-3" min="1" max="10"/>
+        <label for="sessao" class="form-label"><h6 style="color: #89ea55">Sessão (15 dezembro)</h6></label>
+        <select id="sessao" class="form-select">
+          <option value=1>16:00</option>
+          <option value=2>19:30</option>
+        </select>
         <button type="button" class="btn btn-success w-75 mx-4" onclick="saveQtdTickets()">Escolher poltronas</button>
       </div>
     </div>
@@ -17,8 +22,10 @@
 </html>
 <script>
   function saveQtdTickets() {
-    const inputTickets = document.getElementById("typeNumber").value;
+    const selectElement = document.getElementById("sessao").value;
+    const inputTickets = document.getElementById("qtdIngressos").value;
     if(inputTickets > 0 && inputTickets <= 10){
+      localStorage.setItem("sessao", parseInt(selectElement));
       localStorage.setItem("qtdIngressos", parseInt(inputTickets));
       window.location.href = '/select-seats';
     }
